# json_to_csv_tables

./: Cargo.toml  readme.md  test-1.json  test.json
src/: main.rs  parts.rs
src/parts/: err.rs  table.rs
